
Version 1.2.4 : May __, 2016

    -Added writing to SLINKMETRICS file
    -Removed writing to AREASUMMARY files


Version 1.2.3 : April 12, 2016

    -Duplicated rules now inserted under selection
    -Alphabetized save/load system knowledge dialog
    -Added "Fire Suppression Event Probability" to save/load sys knowledge


Version 1.2.2 : March 1, 2016

    -Ecological Grouping names alphabetized
    -Ecological Group dropdown removed
    -Western Spruce Budworm Logic menu item hidden
    -Disable Western Spruce Budworm menu item hidden
    -Western Spruce Budworm logic disabled by default
    -Created LightWsbw2 and SevereWsbw2 processes
    -Added the new processes to the Westside Region 1 zone