@@ -677,10 +677,10 @@ public final class Simulation implements SimulationTypes, Externalizable {
 
     File path;
     for (int run=0; run<numSimulations; run++) {
-      path = new File (getAccessFilesPath(),"EVU_SIM_DATA" + Integer.toString(run+1) + ".txt.gz");
-      GZIPOutputStream out = new GZIPOutputStream(new FileOutputStream(path));
-      accessEvuSimDataOut[run] = new PrintWriter(out);
-//      accessEvuSimDataOut[run] = new PrintWriter(new FileWriter(path, true));
+      path = new File (getAccessFilesPath(),"EVU_SIM_DATA" + Integer.toString(run+1) + ".txt");
+      //GZIPOutputStream out = new GZIPOutputStream(new FileOutputStream(path));
+      //accessEvuSimDataOut[run] = new PrintWriter(out);
+      accessEvuSimDataOut[run] = new PrintWriter(new FileWriter(path, true));
       accessEvuSimDataOut[run].println("RUN,TIMESTEP,SEASON_ID,SLINK,ACRES,LIFEFORM_ID,SPECIES_ID,SIZECLASS_ID,AGE,DENSITY_ID,PROCESS_ID,PROB,PROBSTR,OWNERSHIP_ID,SPECIAL_AREA_ID");
     }
 
